// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageExplorerItem children 1`] = `
<div
  className="c-page-explorer__item"
>
  <Link
    className="c-page-explorer__item__link"
    href="/admin/pages/5/"
  >
    <Icon
      className="icon--menuitem"
      name="folder-inverse"
    />
    <h3
      className="c-page-explorer__item__title"
    >
      test
    </h3>
  </Link>
  <Link
    className="c-page-explorer__item__action c-page-explorer__item__action--small"
    href="/admin/pages/5/edit/"
  >
    <Icon
      className="icon--item-action"
      name="edit"
      title="Edit 'test'"
    />
  </Link>
  <Link
    className="c-page-explorer__item__action"
    href="/admin/pages/5/"
    onClick={[Function]}
  >
    <Icon
      className="icon--item-action"
      name="arrow-right"
      title="View child pages of 'test'"
    />
  </Link>
</div>
`;

exports[`PageExplorerItem renders 1`] = `
<div
  className="c-page-explorer__item"
>
  <Link
    className="c-page-explorer__item__link"
    href="/admin/pages/5/"
  >
    <h3
      className="c-page-explorer__item__title"
    >
      test
    </h3>
  </Link>
  <Link
    className="c-page-explorer__item__action c-page-explorer__item__action--small"
    href="/admin/pages/5/edit/"
  >
    <Icon
      className="icon--item-action"
      name="edit"
      title="Edit 'test'"
    />
  </Link>
</div>
`;

exports[`PageExplorerItem should show a publication status if not live 1`] = `
<div
  className="c-page-explorer__item"
>
  <Link
    className="c-page-explorer__item__link"
    href="/admin/pages/5/"
  >
    <Icon
      className="icon--menuitem"
      name="folder-inverse"
    />
    <h3
      className="c-page-explorer__item__title"
    >
      test
    </h3>
    <span
      className="c-page-explorer__meta"
    >
      <PublicationStatus
        status={
          {
            "has_unpublished_changes": true,
            "live": false,
            "status": "test",
          }
        }
      />
    </span>
  </Link>
  <Link
    className="c-page-explorer__item__action c-page-explorer__item__action--small"
    href="/admin/pages/5/edit/"
  >
    <Icon
      className="icon--item-action"
      name="edit"
      title="Edit 'test'"
    />
  </Link>
  <Link
    className="c-page-explorer__item__action"
    href="/admin/pages/5/"
    onClick={[Function]}
  >
    <Icon
      className="icon--item-action"
      name="arrow-right"
      title="View child pages of 'test'"
    />
  </Link>
</div>
`;

exports[`PageExplorerItem should show a publication status with unpublished changes 1`] = `
<div
  className="c-page-explorer__item"
>
  <Link
    className="c-page-explorer__item__link"
    href="/admin/pages/5/"
  >
    <Icon
      className="icon--menuitem"
      name="folder-inverse"
    />
    <h3
      className="c-page-explorer__item__title"
    >
      test
    </h3>
    <span
      className="c-page-explorer__meta"
    >
      <PublicationStatus
        status={
          {
            "has_unpublished_changes": true,
            "live": true,
            "status": "test",
          }
        }
      />
    </span>
  </Link>
  <Link
    className="c-page-explorer__item__action c-page-explorer__item__action--small"
    href="/admin/pages/5/edit/"
  >
    <Icon
      className="icon--item-action"
      name="edit"
      title="Edit 'test'"
    />
  </Link>
  <Link
    className="c-page-explorer__item__action"
    href="/admin/pages/5/"
    onClick={[Function]}
  >
    <Icon
      className="icon--item-action"
      name="arrow-right"
      title="View child pages of 'test'"
    />
  </Link>
</div>
`;
